<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_principal">

    <fragment
        android:id="@+id/nav_principal"
        android:name="com.atmconsultoria.ui.principal.PrincipalFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_principal"/>

    <fragment
        android:id="@+id/nav_services"
        android:name="com.atmconsultoria.ui.servicos.ServicoFragment"
        android:label="@string/menu_services"
        tools:layout="@layout/fragment_servico"/>

    <fragment
        android:id="@+id/nav_client"
        android:name="com.atmconsultoria.ui.clientes.ClienteFragment"
        android:label="@string/menu_client"
        tools:layout="@layout/fragment_cliente"/>

    <fragment
        android:id="@+id/nav_about"
        android:name="com.atmconsultoria.ui.sobre.SobreFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_sobre"/>

    <fragment
        android:id="@+id/nav_contact"
        android:name="com.atmconsultoria.ui.contato.ContatoFragment"
        android:label="@string/menu_contact"
        tools:layout="@layout/fragment_contato"/>

</navigation>